DFR-439: Inegrate Fortify Scan into nightly pipeline